--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,3 +2,6 @@
 @import "font-awesome-sprockets";
 @import "./font-awesome";
 @import "./messages";
+@import "modules/user";
+@import "config/colors";
+@import "modules/flash";
