--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -2,13 +2,14 @@
 
   .side-header
     .side-header__box
-      %p.side-header__box__user-name うめうめ
+      %p.side-header__box__user-name
+        = current_user.name
       %ul.side-header__box__menu
         %li.side-header__box__menu__new-group
-          = link_to "#", class:"new-group__btn" do
+          = link_to "#", class:"icon" do
             = icon('fas', 'edit')
         %li.side-header__box__menu__edit-user
-          = link_to "#", class:"edit-user__btn" do
+          = link_to edit_user_path(current_user), class:"icon" do
             = icon('fas', 'cog')
             
   .groups
