--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,7 +1,8 @@
 @import "./reset";
 @import "font-awesome-sprockets";
 @import "./font-awesome";
-@import "./messages";
+@import "modules/messages";
 @import "modules/user";
 @import "config/colors";
 @import "modules/flash";
+@import "modules/group"
