--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -6,7 +6,7 @@
         = current_user.name
       %ul.side-header__box__menu
         %li.side-header__box__menu__new-group
-          = link_to "#", class:"icon" do
+          = link_to new_group_path, class:"icon" do
             = icon('fas', 'edit')
         %li.side-header__box__menu__edit-user
           = link_to edit_user_path(current_user), class:"icon" do
