ルーティングを変更し、作成したグループをgroups#indexのサイドバーに表示する

--- a/app/assets/stylesheets/modules/messages.scss
+++ b/app/assets/stylesheets/modules/messages.scss
@@ -32,12 +32,12 @@
     overflow: scroll;
     .group{
       width: 100%;
-      &__group-name{
+      &__name{
         color: #FFFF;
         font-size: 15px;
         font-weight: bold;
       }
-      &__latest-message{
+      &__message{
         color: #FFFF;
         font-size: 11px;
         font-weight: bold;
