メッセージ送信機能を実装しましょう

--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -25,11 +25,11 @@
       %p.message__text aaaa
 
   .form
-    %form.new_message
+    = form_for [@group, @message] do |f|
       .input-box
-        %input.input-box__text{name: "message[content]", placeholder: "type a message", type: "text"}
-        %label{class: "input-box__image"}
-          = icon('fas', 'image')    
-          %input.input-box__image__file{type: "file"}
-      %input.submit-btn{name: "commit", type: "submit", value: "Send"}
+        = f.text_field :content, class: 'input-box__text', placeholder: 'type a message'
+        = f.label :image, class: 'input-box__image' do
+          = icon('fas', 'image') 
+          = f.file_field :image, class: 'input-box__image__file'
+      = f.submit 'Send', class: 'submit-btn'
 
