--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -11,18 +11,8 @@
         %li.main-header__left-box__member-list__member うめうめ
     .main-header__edit-btn Edit
 
-
   .messages
-    .message
-      .message__upper-info
-        %p.message__upper-info__talker うめうめ
-        %p.message__upper-info__date 2019/11/12(Tue) 20:07:41
-      %p.message__text テスト
-    .message
-      .message__upper-info
-        %p.message__upper-info__talker うめうめ
-        %p.message__upper-info__date 2019/11/12(Tue) 20:07:49
-      %p.message__text aaaa
+    = render @messages
 
   .form
     = form_for [@group, @message] do |f|
