--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -10,7 +10,9 @@
           - @group.users.each do |user|
             = user.name
           
-    .main-header__edit-btn Edit
+    = link_to edit_group_path(@group) do
+      .main-header__edit-btn 
+        Edit
 
   .messages
     = render @messages
